--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
+        <meta name="author" content="Timothy Foster, Auroratide" />
+
         <title>Dice Tapper</title>
+
+        <link rel="stylesheet" href="normalize.css" />
+        <link rel="stylesheet" href="global.css" />
     </head>
     <body>
         <div id="root"></div>
