--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
         <meta name="author" content="Timothy Foster, Auroratide" />
 
-        <title>Dice Tapper</title>
+        <title>Tap to Roll</title>
+        <meta name="description" content="Tap to roll some dice, perfect for Dungeons and Dragons or any other roleplaying game." />
 
         <link rel="stylesheet" href="normalize.css" />
         <link rel="stylesheet" href="global.css" />
