--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
         <meta name="author" content="Timothy Foster, Auroratide" />
+        <meta property="og:image" content="icons/512.png">
+	    <link rel="shortcut icon" href="icons/032.png">
 
         <title>Tap to Roll</title>
         <meta name="description" content="Tap to roll some dice, perfect for Dungeons and Dragons or any other roleplaying game." />
