Begin PWAing with a web manifest

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
         <link rel="stylesheet" href="normalize.css" />
         <link rel="stylesheet" href="global.css" />
+        <link rel="manifest" href="taptoroll.webmanifest" />
     </head>
     <body>
         <div class="parchment-container">
