--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
         <meta name="author" content="Timothy Foster, Auroratide" />
         <meta property="og:image" content="icons/512.png">
+        <meta name="theme-color" content="#59190d">
+        <link rel="apple-touch-icon" sizes="192x192" href="icons/192.png" />
 	    <link rel="shortcut icon" href="icons/032.png">
 
         <title>Tap to Roll</title>
